Finished based style of play page

--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -1,10 +1,11 @@
 .box {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    background-image: linear-gradient(to right, #3A7AEA, #27C3BE, #ACF2AB);
-    border-radius: 8px;
-    color: #000000;
-}
+    background: rgb(255,255,255);
+/*     
+    background: linear-gradient(135deg,
+        hsl(182, 51.3%, 46.7%) 0%,
+        hsl(238, 96%, 62.9%) 100%); */
 
-.box > * {
+    border-radius: 5px;
     color: #000000;
 }
