--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -36,8 +36,15 @@
     font-size: 2rem;
     margin: 1rem 0;
     text-transform: uppercase;
-    border: 1px solid #FFFFFF;
-    border-radius: 5px;
+    background-color: #333;
+    border: 1px solid #FFF;
+    border-radius: 16px;
+    transition: .25s color, .25s background-color ease-in;
+}
+
+.home__list__item:hover {
+    background-color: #FFF;
+    color: #333;
 }
 
 .home__list__item > a {
