--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -9,6 +9,12 @@
     text-align: center;
 }
 
+.button.disabled,
+.button:disabled {
+    border: 1px solid gray;
+    color: gray;
+}
+
 .button:hover {
     background-color: #FFF;
     color: #333;
