--- a/src/pages/game-menu.css
+++ b/src/pages/game-menu.css
@@ -35,6 +35,10 @@
     margin-bottom: 2rem;
 }
 
+.menu__new__item:last-child {
+    min-height: 191px;
+}
+
 .menu__new__item:nth-child(odd) {
     margin-right: 1rem;
 }
