--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -9,16 +9,19 @@
 .board {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    display: grid;
+    grid-gap: 0px;
+    grid-template-columns: 100%;
+    grid-template-rows: 60px 1fr 60px;
+    grid-template-areas:
+        "header"
+        "content"
+        "footer"
 }
 
 .board__canvas {
     transition: .25s filter ease-in;
+    grid-area: content;
 }
 
 .board__canvas.lost {
