--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,11 @@ ul {
     width: 100%;
     overflow: auto;
 }
+
+.overflow-x {
+    overflow-x: scroll;
+}
+
+.center {
+    text-align: center;
+}
