--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -7,6 +7,7 @@
     user-select: none;
 }
 .board {
+    position: relative;
     width: 100%;
     height: 100%;
     display: grid;
@@ -20,8 +21,13 @@
 }
 
 .board__canvas {
+    width:  calc(100% - 2rem);
+    height: calc(100% - 2rem);
     transition: .25s filter ease-in;
     grid-area: content;
+    position: absolute;
+    overflow: scroll;
+    padding: 1rem;
 }
 
 .board__canvas.lost {
