--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -21,13 +21,12 @@
 }
 
 .board__canvas {
-    width:  calc(100% - 2rem);
-    height: calc(100% - 2rem);
+    width:  100%;
+    height: 100%;
     transition: .25s filter ease-in;
     grid-area: content;
     position: absolute;
     overflow: scroll;
-    padding: 1rem;
 }
 
 .board__canvas.lost {
