--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -26,6 +26,7 @@
     transition: .25s filter ease-in;
     grid-area: content;
     position: absolute;
+    overflow: scroll;
 }
 
 .board__canvas.lost {
