add desktop styles

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -23,3 +23,9 @@
 .link-button {
     line-height: 3.5rem;
 }
+
+@media only screen and (min-width: 768px) {
+    .button, .link-button {
+        width: 100%;
+    }
+}
