--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -36,3 +36,9 @@
 .header > h3 {
     margin: 0;
 }
+
+@media only screen and (min-width: 768px) {
+    .header--game {
+        width: 100%;
+    }
+}
