--- a/src/pages/game-menu.css
+++ b/src/pages/game-menu.css
@@ -77,3 +77,29 @@
     text-align: center;
     margin-bottom: 1rem;
 }
+
+@media only screen and (min-width: 768px) {
+
+    .menu {
+        width: 800px;
+        margin: auto;
+    }
+
+    .menu__new {
+        justify-content: space-between;
+    }
+
+    .menu__new__item {
+        width: 175px;
+        margin: 0px .5rem 2rem .5rem;
+    }
+
+    .menu__continue {
+        justify-content: space-between;
+    }
+
+    .menu__continue__item {
+        width: 250px;
+        margin: 0px .5rem 1rem .5rem;
+    }
+}
