--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -8,6 +8,13 @@
     align-items: center;
 }
 
+@media only screen and (min-width: 768px) {
+    .home {
+        margin: auto;
+        max-width: 600px;
+    }
+}
+
 .home__header {
     flex: 1;
     display: flex;
