--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -67,5 +67,11 @@
 }
 
 @media only screen and (min-width: 768px) {
-
+    .board__popup {
+        position: fixed;
+        margin: auto;
+        bottom: 60px;
+        width: calc(100% - 7rem);
+        left: 3.5rem;
+    }
 }
