--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -9,3 +9,13 @@
     border-radius: 5px;
     color: #000000;
 }
+
+@media only screen and (min-width: 768px) {
+    .box {
+        transition: .25s transform ease-in-out;
+    }
+
+    .box:hover {
+        transform: translateY(-2px);
+    }
+}
