--- a/src/pages/game-menu.css
+++ b/src/pages/game-menu.css
@@ -104,7 +104,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 1rem;
-        margin: 0;
+        margin: 0px 0px 2rem 0px;
     }
 
     .menu__continue__item {
