--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,12 @@ ul {
     overflow-x: hidden;
 }
 
+.divider {
+    border: 1px solid #FFF;
+    width: 100%;
+    margin: 1rem 0px;
+}
+
 @media only screen and (min-width: 768px) {
     #root {
         margin: 0px 3.5rem;
