--- a/src/pages/game-menu.css
+++ b/src/pages/game-menu.css
@@ -80,18 +80,16 @@
     }
 }
 
-@media only screen and (min-width: 768px) {
-
+@media only screen and (min-width: 600px) {
     .menu {
-        width: 800px;
+        width: 600px;
         margin: auto;
     }
 
-    
     .menu__new {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-gap: 2rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 1rem;
     }
 
     .menu__new__item {
@@ -102,9 +100,29 @@
 
     .menu__continue {
         display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 1rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media only screen and (min-width: 910px) {
+
+    .menu {
+        width: 800px;
+        margin: auto;
+    }
+
+    
+    .menu__new {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap: 2rem;
+    }
+
+    .menu__continue {
         grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 1rem;
-        margin: 0px 0px 2rem 0px;
+        grid-row-gap: 2rem;
+        margin-bottom: 2rem;
     }
 
     .menu__continue__item {
