--- a/src/pages/stats.css
+++ b/src/pages/stats.css
@@ -1,12 +1,39 @@
 .stats {
-    margin: 0px 1rem;
+    margin: 0px 1rem 1rem;
 }
 
 .stats__header {
-    margin-bottom: 1rem;
+    margin: 1rem 0px;
 }
 
-.stats--chart {
+.stats__caption {
+    margin: 1rem;
+}
+
+.stats__chart {
     width: 200px;
     margin: auto;
+}
+
+.stats__chart__list {
+    margin: 1rem;
+}
+
+.stats__table {
+    margin: auto;
+}
+
+.stats__table tbody tr td {
+    padding: 1px 6px;
+}
+
+.stats__table tbody tr td:first {
+    text-align: left;
+}
+
+@media only screen and (min-width: 768px) {
+    .stats {
+        margin: auto;
+        width: 600px;
+    }
 }
