removed console logs and small bug fixes

--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -16,7 +16,7 @@
     appearance: none;
     flex: 1;
     cursor: pointer;
-    padding: 1rem;
+    padding: 12px;
     border: 1px solid #FFF;
     border-radius: 16px;
     background-color: inherit;
