--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
 body, html {
     padding: 0;
     margin: 0;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background-color: #333;
 }
@@ -59,7 +59,7 @@ ul {
 
 #root {
     /* margin: 0px 16px; */
-    height: 100vh;
+    height: 100%;
     position: relative;
     display: grid;
     grid-gap: 0px;
