updated manifest file

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -27,7 +27,7 @@
     text-align: center;
     margin: 0;
     font-size: 4rem;
-    font-family: 'Permanent Marker', cursive;
+    /* font-family: 'Permanent Marker', cursive; */
 }
 
 .home__list {
